[package]
name = "claude-usage"
version = "0.2.0"
edition = "2021"
description = "Check your Claude Pro/Max plan usage limits from the terminal"

[[bin]]
name = "claude-usage"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
colored = "2"
